Set up State Hooks for the BugList and AddBug Components. Bug List is now passed to Bug Table from Bug List. Also added basic form for adding a new bug in AddBug component.

--- a/src/client/styles/base/_base.scss
+++ b/src/client/styles/base/_base.scss
@@ -5,3 +5,50 @@
 html {
     font-size: 62.5%
 }
+
+/* 
+    Restore all the DOM elements to their default sizes based on the conversion
+    factor we set up above. If we don't do this, the ENTIRE app will shrink to
+    62.5% of its default size.
+*/
+
+body {
+    font-size: 1.6rem; /* 16px */
+}
+
+h1 {
+    font-size: 2.4rem; /* 24px */
+}
+
+h2 {
+    font-size: 2.2rem; /* 22px */
+}
+
+h3 {
+    font-size: 1.8rem; /* 18px */
+}
+
+h4 {
+    font-size: 1.6rem; /* 16px */
+}
+
+h5 {
+    font-size: 1.2rem; /* 12px */
+}
+
+h6 {
+    font-size: 1rem; /* 10px */
+}
+
+/* 
+    Make the cursor change when hovering over an active button,
+    and make sure it doesn't change when hovering over a disabled one
+*/ 
+
+button {
+    cursor: pointer;
+}
+
+button:disabled {
+    cursor: default;
+}
