Implemented the AddBug form. It is now possible to add bugs to the list. Also some refactoring.

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -1,5 +1,6 @@
 // BASE STYLES & SETTINGS
-@import './base/base';
+@import './base/base.scss';
+@import './base/settings.scss';
 
 // COMPONENT STYLES
 @import '../components/bug-table/bug-table.styles.scss';
