Bug Edit page is complete and functional. Began styling components using Bootstrap.

--- a/src/client/styles/base/_base.scss
+++ b/src/client/styles/base/_base.scss
@@ -52,3 +52,11 @@ button {
 button:disabled {
     cursor: default;
 }
+
+/* 
+    Remove underlining from hyperlinks 
+*/
+
+a {
+    text-decoration: none;
+}
