Styling for the Bug Edit Page

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -5,3 +5,4 @@
 
 // COMPONENT STYLES
 @import '../components/bug-table/bug-table.styles.scss';
+@import '../pages/bug-edit-page/bug-edit-page.styles.scss';
